--- a/css/main.css
+++ b/css/main.css
@@ -130,12 +130,17 @@ ul {
   background-color: #fff;
 }
 
-@media(min-width:552px) {
+@media(min-width:576px) {
   .btn {
     width: 100%;
     max-width: initial;
     padding: 20px 0;
     font-size: 18px;
+  }
+
+  .section-title {
+    font-size: 28px;
+    line-height: 34px;
   }
 }
 
@@ -455,7 +460,40 @@ ul {
   line-height: 18px;
 }
 
-@media screen and (min-width:768px) {
+@media(min-width:576px) {
+  .advantages__item {
+    padding: 17px 0;
+    font-size: 20px;
+    line-height: 23px;
+  }
+
+  .advantages__item p {
+    max-width: 279px;
+  }
+
+  .advantages .item__num {
+    line-height: 38px;
+    font-size: 33px;
+    transform: translate(-21px, -50%);
+  }
+}
+
+@media screen and (min-width:1024px) {
+  .advantages {
+    margin-bottom: 120px;
+  }
+}
+
+section.tutors {
+  margin-bottom: 40px;
+}
+
+section.tutors .section-title {
+  max-width: 420px;
+  text-transform: uppercase;
+}
+
+@media screen and (min-width:992px) {
   .advantages .container {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 75px;
@@ -480,24 +518,7 @@ ul {
     padding: 10px 0;
     transform: translate(-45px, -50%);
   }
-}
 
-@media screen and (min-width:1024px) {
-  .advantages {
-    margin-bottom: 120px;
-  }
-}
-
-section.tutors {
-  margin-bottom: 40px;
-}
-
-section.tutors .section-title {
-  max-width: 420px;
-  text-transform: uppercase;
-}
-
-@media screen and (min-width:992px) {
   section.tutors {
     margin-bottom: 120px;
   }
@@ -626,6 +647,47 @@ section.tutors .section-title {
 
   .tutors-card.became-tutor {
     height: auto;
+  }
+
+  .tutors-card__rate {
+    grid-column-start: 1;
+    grid-row-start: 3;
+  }
+
+  .tutors-card__rate i {
+    font-size: 16px;
+  }
+
+  .tutors-card__top {
+    row-gap: 15px;
+    column-gap: 10px;
+  }
+
+  .tutors-card__name {
+    font-size: 20px;
+    margin-top: 13px;
+  }
+
+  .tutors-card {
+    padding: 20px;
+    row-gap: 15px;
+    font-size: 16px;
+  }
+
+  .tutors-card__course p:nth-child(1) {
+    font-size: 14px;
+  }
+
+  .tutors-card__course p:last-of-type {
+    margin-bottom: 10px;
+  }
+
+  .tutors-card__course p .tutors-card__course-link::after {
+    margin-left: 15px;
+  }
+
+  .tutors-card__course {
+    grid-template-areas: "title title""curs_name curs_name""link link";
   }
 }
 
@@ -1125,7 +1187,8 @@ section.feedback .tutors-card__tutor {
 
 @media(min-width:576px) {
   .accordion__item {
-    font-size: 24px;
+    font-size: 20px;
+    padding: 28px 20px;
   }
 
   .accordion .accordion__content {
@@ -1201,193 +1264,8 @@ section.feedback .tutors-card__tutor {
   }
 
   .accordion__item {
-    padding: 28px 20px;
     line-height: 120%;
-  }
-}
-
-.callback-form .section-title {
-  text-align: center;
-}
-
-.form {
-  display: grid;
-  row-gap: 10px;
-  max-width: 880px;
-  margin: 0 auto 80px;
-}
-
-.form input,
-.form select {
-  width: 100%;
-  box-sizing: border-box;
-  height: 32px;
-  border-radius: 5px;
-  border: 1px solid #0b2235;
-  font-size: 11px;
-  font-family: Roboto, sans-serif;
-  line-height: 13px;
-  padding-left: 20px;
-  font-weight: 300;
-}
-
-.form input.invalid::placeholder {
-  color: #fd460e;
-}
-
-.form textarea[name=comment] {
-  border: 1px solid #0b2235;
-  font-family: Roboto, sans-serif;
-  border-radius: 5px;
-  padding: 20px;
-  box-sizing: border-box;
-  font-size: 11px;
-  font-weight: 300;
-}
-
-.form .from__btn {
-  margin-top: 10px;
-}
-
-.form .btn {
-  border: none;
-  width: 100%;
-}
-
-.form .select2-container--default .select2-selection--single .select2-selection__arrow {
-  position: relative;
-  width: 10px;
-  height: 11px;
-  top: -3px;
-}
-
-.form .select2-container--default .select2-selection--single {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 20px;
-  border: 1px solid #0b2235;
-  font-size: 11px;
-  height: 32px;
-}
-
-.form .select2-container .select2-selection--single .select2-selection__rendered {
-  padding: 0;
-}
-
-.form .select2-container--default .select2-selection--single .select2-selection__arrow b {
-  right: 0;
-  left: auto;
-  border-color: #000 transparent transparent;
-  border-width: 8px 5px 0;
-  transform: rotate(0);
-  transition: .3s;
-}
-
-.form .select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b {
-  border-color: #000 transparent transparent;
-  border-width: 8px 5px 0;
-  transform: rotate(180deg);
-  transition: .3s;
-}
-
-.form .select2-container--default .select2-selection--single .select2-selection__placeholder {
-  color: #232523;
-}
-
-.form .select2-results__options .select2-results__option {
-  padding: 20px;
-}
-
-.form .required {
-  position: relative;
-}
-
-.form .required::after {
-  content: "*";
-  position: absolute;
-  top: -11px;
-  right: 5px;
-  color: rgba(253, 70, 14, .7);
-  font-size: 15px;
-}
-
-@media(min-width:576px) {
-  .form input {
-    height: 60px;
-  }
-
-  .form .select2-container--default .select2-selection--single {
-    height: 60px;
-    font-size: 16px;
-  }
-
-  .form .select2-container--default .select2-selection--single .select2-selection__arrow b,
-  .form .select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b {
-    border-width: 16px 10px 0;
-  }
-}
-
-@media(min-width:992px) {
-  .form {
-    gap: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-areas: "phone email course""name name wherefrom""text text text";
-  }
-
-  .form input,
-  .form select {
-    height: 52px;
-    font-size: 14px;
-    line-height: 15px;
-  }
-
-  .form label[for=name] {
-    grid-area: name;
-  }
-
-  .form label[for=phone] {
-    grid-area: phone;
-  }
-
-  .form label[for=email] {
-    grid-area: email;
-  }
-
-  .form select[name=course] {
-    grid-area: course;
-  }
-
-  .form select[name=wherefrom] {
-    grid-area: wherefrom;
-  }
-
-  .form textarea[name=comment] {
-    grid-area: text;
-    height: 120px;
-    width: 100%;
-    font-size: 14px;
-    margin-bottom: 40px;
-    resize: none;
-  }
-
-  .form .from__btn {
-    grid-column: 2/3;
-  }
-
-  .form .select2-container--default .select2-selection--single {
-    height: 52px;
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    justify-content: space-between;
-    padding: 0 20px;
-  }
-
-  .form .select2-container--default .select2-selection--single .select2-selection__arrow b,
-  .form .select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b {
-    border-width: 8px 5px 0;
+    font-size: 24px;
   }
 }
 
