--- a/css/main.css
+++ b/css/main.css
@@ -1568,3 +1568,283 @@ section.feedback .tutors-card__tutor {
     height: 8px;
   }
 }
+
+.footer__mob {
+  display: block;
+  background-color: rgba(220, 231, 252, .5);
+  padding-block: 20px;
+  overflow-x: hidden;
+}
+
+.footer__mob .footer__list li {
+  position: relative;
+}
+
+.footer__mob .footer__list li:after {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: -50%;
+  right: -50%;
+  height: 1px;
+  background-color: #dce7fc;
+}
+
+.footer {
+  background-color: rgba(220, 231, 252, .5);
+  padding-top: 8px;
+  padding-bottom: 20px;
+  position: relative;
+  z-index: 2;
+  display: none;
+}
+
+.footer .row {
+  position: relative;
+  z-index: 2;
+}
+
+.footer__bg-layer {
+  position: absolute;
+  z-index: 1;
+  left: -100%;
+  right: -100%;
+  top: 0;
+  background-color: rgba(220, 231, 252, .5);
+  height: 100%;
+  width: 100vw;
+}
+
+.footer__mob-top {
+  margin-bottom: 17px;
+}
+
+.footer__title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  color: #232523;
+  margin-bottom: 14px;
+}
+
+.footer__list {
+  font-size: 14px;
+  line-height: 16px;
+  display: grid;
+}
+
+.footer__list li {
+  padding: 8px 0;
+}
+
+.footer__mob-bottom {
+  display: grid;
+  gap: 10px;
+}
+
+.footer__sup-pay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.footer__sup-pay p {
+  font-size: 11px;
+}
+
+.footer__sup-pay .pay-ico {
+  width: 20px;
+  height: 20px;
+}
+
+.footer__social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.footer__copyright {
+  text-align: center;
+  font-size: 11px;
+}
+
+.footer .footer__btn {
+  margin: 0;
+}
+
+.footer .col:nth-child(4) {
+  display: none;
+}
+
+.social-ico {
+  width: 20px;
+  height: 20px;
+  display: block;
+}
+
+@media(min-width:576px) {
+  .footer__mob {
+    display: none;
+  }
+
+  .footer {
+    display: block;
+    padding-top: 31px;
+  }
+
+  .footer .footer__btn {
+    width: 278px;
+  }
+
+  .footer__list {
+    font-size: 20px;
+  }
+
+  .footer__title {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+
+  .footer .row {
+    display: grid;
+    grid-template-columns: 1fr auto;
+  }
+
+  .footer .btn-wrap {
+    display: grid;
+    gap: 20px;
+  }
+
+  .footer .social-ico {
+    width: 40px;
+    height: 40px;
+  }
+
+  .footer .col:nth-child(1) .footer__sup-pay {
+    justify-content: start;
+    margin-top: 45px;
+  }
+
+  .footer .col:nth-child(1) .footer__sup-pay p {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .footer .col:nth-child(1) .pay-ico {
+    width: 40px;
+    height: 40px;
+  }
+
+  .footer .col:nth-child(1) .footer__copyright {
+    display: none;
+  }
+
+  .footer .col:nth-child(1)>.footer__btn {
+    margin-bottom: 20px;
+  }
+
+  .footer .col:nth-child(3) {
+    margin-top: 60px;
+    grid-column: 1/3;
+  }
+
+  .footer .col:nth-child(3) .footer__title {
+    text-align: center;
+  }
+
+  .footer__copyright {
+    margin-top: 40px;
+    font-size: 16px;
+  }
+}
+
+@media(min-width:992px) {
+  .footer {
+    padding-block: 40px;
+  }
+
+  .footer .row {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .footer__title {
+    font-size: 24px;
+    margin-bottom: 20px;
+    line-height: 28px;
+    padding: 0;
+  }
+
+  .footer__btn {
+    width: 278px;
+    margin: 0;
+  }
+
+  .footer__sup-pay {
+    justify-content: start;
+    margin-top: 65px;
+    gap: 15px;
+  }
+
+  .footer__sup-pay p {
+    font-size: 24px;
+  }
+
+  .footer__list {
+    gap: 20px;
+  }
+
+  .footer__list li {
+    padding: 0;
+    border-bottom: none;
+  }
+
+  .footer__list li a {
+    font-size: 18px;
+    line-height: 21px;
+  }
+
+  .footer__copyright {
+    font-size: 20px;
+    line-height: 24px;
+    color: #000;
+    margin-top: 63px;
+  }
+
+  .footer__social {
+    gap: 15px;
+  }
+
+  .footer .pay-ico,
+  .footer .social-ico {
+    width: 40px;
+    height: 40px;
+  }
+
+  .footer .col:nth-child(1) .btn-wrap {
+    display: none;
+  }
+
+  .footer .col:nth-child(1) .footer__sup-pay {
+    display: flex;
+  }
+
+  .footer .col:nth-child(1) .footer__copyright {
+    display: block;
+  }
+
+  .footer .col:nth-child(3) {
+    margin: 0;
+  }
+
+  .footer .col:nth-child(4) {
+    display: block;
+  }
+
+  .footer .col:nth-child(4) .btn-wrap {
+    display: grid;
+  }
+}
