--- a/css/main.css
+++ b/css/main.css
@@ -1488,6 +1488,23 @@ ul {
   border: 1px solid #0b2235;
 }
 
+.form .custom-select.invalid {
+  border: 1px solid rgba(238, 66, 66, .7);
+}
+
+.form .custom-select-required {
+  position: relative;
+}
+
+.form .custom-select-required::before {
+  content: "*";
+  position: absolute;
+  top: -28px;
+  right: 5px;
+  color: rgba(253, 70, 14, .7);
+  font-size: 15px;
+}
+
 .form input[type=phone] {
   padding-left: 55px;
 }
@@ -1914,17 +1931,18 @@ ul {
   right: 0;
   top: 0;
   height: 100%;
-  background: rgba(0, 0, 0, .5);
-  z-index: 99999;
+  background-color: rgba(0, 0, 0, .5);
+  z-index: 999999;
   padding-top: 15%;
   padding-left: 20px;
   padding-right: 20px;
   display: none;
+  overflow-y: scroll;
 }
 
 .popup-body {
   max-width: 700px;
-  margin: 0 auto;
+  margin: 0 auto 100px;
   background-color: #fff;
   padding: 40px;
   border: 1px solid #0b2235;
