--- a/css/feedback-page.css
+++ b/css/feedback-page.css
@@ -1,21 +1,21 @@
-.feedback-page {
+.cards-page {
     margin-top: 85px;
 }
 
-.feedback-page .give-feedback.btn.btn_blue {
+.cards-page .action-btn.btn.btn_blue {
     display: none;
 }
 
-.feedback-page .section-title-wrap {
+.cards-page .section-title-wrap {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 1fr);
 }
 
-.feedback-page .back-link {
+.cards-page .back-link {
     order: 2;
 }
 
-.feedback-page .section-title {
+.cards-page .section-title {
     order: 1;
 }
 
@@ -65,6 +65,7 @@
 }
 
 .popup.give-feedback-popup .back-link {
+    display: block;
     margin-bottom: 40px;
 }
 
@@ -86,37 +87,33 @@
 }
 
 @media(min-width:576px) {
-    .give-feedback {
-        width: 278px;
-    }
-
-    .feedback-page .back-link {
+    .cards-page .back-link {
         grid-area: link;
         grid-row: 1;
         grid-column: 1;
         margin-bottom: 32px;
     }
 
-    .feedback-page .section-title {
+    .cards-page .section-title {
         grid-area: title;
         grid-row: 2;
         grid-column: 1;
         margin: 0;
     }
 
-    .feedback-page .give-feedback.btn.btn_blue {
+    .cards-page .action-btn.btn.btn_blue {
         grid-area: btn;
         display: block;
         grid-row: 2;
     }
 
-    .feedback-page .section-title-wrap {
+    .cards-page .section-title-wrap {
         grid-template-rows: 1fr 1fr;
         grid-template-areas: "link link""title btn";
         margin-bottom: 71px;
     }
 
-    .feedback-page .tutors-card.give-feedback {
+    .cards-page .tutors-card.give-feedback {
         display: none;
     }
 
@@ -126,7 +123,7 @@
 }
 
 @media(min-width:992px) {
-    .feedback-page {
+    .cards-page {
         margin-top: 240px;
     }
 
