--- a/css/main.css
+++ b/css/main.css
@@ -277,7 +277,8 @@ ul {
 
 .header .mob-menu .menu__nav li {
   padding: 12px 0 10px 40px;
-  font-size: 10px;
+  font-size: 14px;
+  line-height: 2;
   text-transform: uppercase;
 }
 
@@ -455,9 +456,9 @@ ul {
 }
 
 .slider {
-  margin-bottom: 40px;
+  margin-bottom: 24px;
   background-image: url(../img/header-main-bg.svg);
-  height: 100vh;
+  height: 52vh;
   background-repeat: no-repeat;
   background-size: cover;
 }
