--- a/css/main.css
+++ b/css/main.css
@@ -1288,10 +1288,23 @@ ul {
 }
 
 .form {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   row-gap: 10px;
   max-width: 880px;
   margin: 0 auto 80px;
+}
+
+.form .input-wrapper{
+  display: flex;
+}
+
+.form .input-wrapper label{
+  width: 50%;
+}
+
+.form .input-wrapper label:first-child{
+  margin-right: 20px;
 }
 
 .form input,
@@ -1352,14 +1365,10 @@ ul {
   background-repeat: no-repeat;
 }
 
-.form select {
-  display: none;
-}
-
 .form .custom-select {
+  cursor: pointer;
   width: 100%;
   box-sizing: border-box;
-  height: 32px;
   border-radius: 5px;
   border: 1px solid #0b2235;
   font-size: 11px;
@@ -1369,10 +1378,6 @@ ul {
   font-weight: 400;
   padding-left: 20px;
   box-shadow: 0 6px 12px 0 rgba(0, 0, 0, .0509803922);
-}
-
-.form .custom-select:hover {
-  border: 1px solid #0b2235;
 }
 
 .form .custom-select.invalid {
@@ -1442,9 +1447,14 @@ ul {
 }
 
 @media(min-width:576px) {
-  .form input {
+  .form input,
+  .form select {
     height: 60px;
     font-size: 16px;
+  }
+
+  .form .custom-select{
+      font-size: 14px;
   }
 
   .form textarea[name=comment] {
@@ -1477,12 +1487,11 @@ ul {
 @media(min-width:992px) {
   .form {
     gap: 20px;
-    grid-template-columns: 1fr 1fr 33%;
-    grid-template-areas: "phone email course""name name wherefrom""text text text";
   }
 
   .form input,
   .form select {
+    display: block;
     height: 52px;
     font-size: 14px;
     line-height: 15px;
@@ -1499,18 +1508,6 @@ ul {
   .form label[for=phone]::before {
     top: 13px;
     left: 20px;
-  }
-
-  .form label[for=email] {
-    grid-area: email;
-  }
-
-  .form .select-course {
-    grid-area: course;
-  }
-
-  .form .select-wherefrom {
-    grid-area: wherefrom;
   }
 
   .form textarea[name=comment] {
