--- a/css/main.css
+++ b/css/main.css
@@ -308,7 +308,8 @@ ul {
 .header .mob-menu .header__footer{
   position: absolute;
   bottom: 80px;
-  left: 40%;
+  width: 100%;
+  margin: 0 auto;
 }
 
 @media screen and (min-width:576px){
