--- a/css/mentor-info-popup.css
+++ b/css/mentor-info-popup.css
@@ -17,43 +17,41 @@
     margin-bottom: 20px;
 }
 
-.mentor-info-popup__bottom {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr;
+.mentor-info__block p {
+    line-height: 18.75px;
 }
 
-.mentor-info-popup__bottom p {
-    grid-column: 1/3;
-    grid-row: 1;
-}
-
-.mentor-info-popup__bottom .col:last-child {
-    grid-row: 3;
-}
-
-.mentor-info-popup__bottom>p {
-    color: rgba(35, 37, 35, .8);
-    margin-bottom: 20px;
+.mentor-info-popup__bottom .mentor-info__course-title{
+    color: #FD460E;
+    margin-bottom: 5px;
 }
 
 .mentor-info-popup__top {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    column-gap: 15px;
     margin-bottom: 15px;
 }
 
 .mentor-info-popu__name {
-    grid-row-start: 1;
-    grid-column-start: 2;
     margin-top: 9px;
+    margin-left: 10px;
+    font-weight: 600;
+    font-size: 20px;
 }
 
 .popup.mentor-info-popup .tutors-card__rate {
-    grid-column-start: 2;
-    grid-row-start: 1;
+
     margin-top: 35px;
+}
+
+.mentor-info-popup__wrapper{
+    display: flex;
+    align-items: center;
+}
+
+.mentor-info-popup__img img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 @media(min-width:576px) {
@@ -64,22 +62,21 @@
 
 @media(min-width:992px) {
     .mentor-info-popup__img {
-        width: 150px;
+        width: 100px;
+        height: 100px;
+
     }
 
     .mentor-info-popup__top {
-        display: grid;
-        grid-template-columns: auto 1fr;
-        margin-bottom: 40px;
+        margin-bottom: 20px;
     }
 
     .mentor-info-popu__name {
-        font-size: 32px;
         line-height: 38px;
-        margin-top: 40px;
+        margin-top: 0;
     }
 
     .popup.mentor-info-popup .tutors-card__rate {
-        margin-top: 88px;
+        margin-top: 20px;
     }
 }
