--- a/css/main.css
+++ b/css/main.css
@@ -899,6 +899,10 @@ ul {
     height: 361px;
   }
 
+  .tutors .tutors-card{
+    row-gap: 0;
+  }
+
   .tutors-card__top {
     column-gap: 7px;
     row-gap: 20px;
@@ -908,8 +912,8 @@ ul {
   }
 
   .tutors-card__img {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     grid-area: img;
     grid-row-end: 2;
   }
@@ -1197,6 +1201,10 @@ ul {
     grid-template-columns: 60px;
     grid-template-areas: "img name""rate rate";
     height: 100px;
+  }
+
+  .tutors .tutors-card__top{
+    height: 50px;
   }
 
   .tutors-card__name {
