--- a/assets/itc-slider.css
+++ b/assets/itc-slider.css
@@ -39,7 +39,7 @@
   border-radius: 20px;
   border: 1px solid #0B2235;
   padding: 20px;
-  height: 180px;
+  height: 200px;
 }
 
 .itc-slider-btn {
@@ -144,7 +144,7 @@
 .itc-slider-indicators {
   position: absolute;
   right: 0;
-  bottom: 0;
+  bottom: -20px;
   left: 0;
   z-index: 15;
   display: flex;
