--- a/css/main.css
+++ b/css/main.css
@@ -1681,7 +1681,7 @@ ul {
   width: 155px;
   height: 32px;
   margin: unset;
-  font-size: 12px;
+  font-size: 10px;
 }
 
 .footer .social-ico svg{
@@ -1693,6 +1693,12 @@ ul {
   .footer {
     padding-top: 31px;
   }
+
+  .footer__btn{
+    width: 200px;
+    font-size: 12px;
+  }
+
 
   .footer__logo{
     width: 60px;
