--- a/assets/itc-slider.css
+++ b/assets/itc-slider.css
@@ -63,6 +63,10 @@
     flex: 0 0 100%;
     max-width: calc(100% - 50px);
   }
+
+  .slider-text{
+    font-size: 16px;
+  }
 }
 
 @media (min-width: 992px) {
@@ -138,7 +142,7 @@
 }
 
 .slider-text{
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .itc-slider-indicators {
